# cuda-hw

cuda-hw1/: CMakeLists.txt  Makefile  cuda_hw1  openmp_hw1
cuda-hw1/scripts/: cmakeSetup.sh  cmake_build.sh
cuda-hw1/src/: cuda_helper.cpp  cuda_helper.h  main.cu
cuda-hw1/src/cuda_impl/: CMakeLists.txt  cuda_helper.cpp  cuda_helper.h  main.cu
cuda-hw1/src/openmp_impl/: CMakeLists.txt  main.cpp
